# btree-ui

./: .gitignore  CMakeLists.txt  README.md  makefile  registros.txt  teste.txt
TP/: CMakeLists.txt  app  makefile
TP/glade/: janela1.glade  janela2.glade  janela2.glade~  janelaInsere.glade~  janelaPesquisa.glade~
TP/src/: arraylist.c  arraylist.h  arvore.c  arvore.h  main.c  renderer.c  renderer.h
glade/: janela1.glade~  janelaInsere.glade  janelaPesquisa.glade  janelaRemover.glade  janelaRemover.glade~
src/: arvore.c  arvore.h  main.c  textinput.c  textinput.h
